--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = \"Jau\""
+    "travel_month = \"January\""
    ]
   },
   {
